--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ img {
 
 .paper.heart::after {
   content: "";
-  background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
+  background-image: url('https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fheart-shaped-clouds-v0-tw5dfddqwhwa1.jpg%3Fauto%3Dwebp%26s%3Dc4206ed19447a9996c8b397e00253919cbe4b5c3');
   width: 100%;
   height: 100%;
   position: absolute;
