--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .paper {
-  background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
+  background-image: url("https://raw.githubusercontent.com/KENZO577/forher/main/images/transparent-heart-shaped-object-pink-heart-floating-heart-clou-pink-heart-shaped-cloud-floats-in-black-background656ca4c3ac84a9.2358593817016188837066.png");
   background-size: 500px;
   background-position: center center;
   padding: 20px 100px;
